--- a/.cproject
+++ b/.cproject
@@ -166,12 +166,12 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="ilg.gnuarmeclipse.managedbuild.cross.config.elf.debug.1782790778.1337480925" name="stm32f2xx_rtc.c" rcbsApplicability="disable" resourcePath="system/src/stm32f2-stdperiph/stm32f2xx_rtc.c" toolsToInvoke="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.850964623.1572328403">
-						<tool id="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.850964623.1572328403" name="Cross ARM C Compiler" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.850964623"/>
+					<fileInfo id="ilg.gnuarmeclipse.managedbuild.cross.config.elf.debug.1782790778.1222413385" name="stm32f2xx_usart.c" rcbsApplicability="disable" resourcePath="system/src/stm32f2-stdperiph/stm32f2xx_usart.c" toolsToInvoke="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.850964623.135955960">
+						<tool id="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.850964623.135955960" name="Cross ARM C Compiler" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.850964623"/>
 					</fileInfo>
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
-						<entry excluding="src/stm32f2-stdperiph/stm32f2xx_wwdg.c|src/stm32f2-stdperiph/stm32f2xx_usart.c|src/stm32f2-stdperiph/stm32f2xx_spi.c|src/stm32f2-stdperiph/stm32f2xx_sdio.c|src/stm32f2-stdperiph/stm32f2xx_rng.c|src/stm32f2-stdperiph/stm32f2xx_iwdg.c|src/stm32f2-stdperiph/stm32f2xx_i2c.c|src/stm32f2-stdperiph/stm32f2xx_hash_sha1.c|src/stm32f2-stdperiph/stm32f2xx_hash_md5.c|src/stm32f2-stdperiph/stm32f2xx_hash.c|src/stm32f2-stdperiph/stm32f2xx_fsmc.c|src/stm32f2-stdperiph/stm32f2xx_flash.c|src/stm32f2-stdperiph/stm32f2xx_dcmi.c|src/stm32f2-stdperiph/stm32f2xx_dbgmcu.c|src/stm32f2-stdperiph/stm32f2xx_dac.c|src/stm32f2-stdperiph/stm32f2xx_cryp_tdes.c|src/stm32f2-stdperiph/stm32f2xx_cryp_des.c|src/stm32f2-stdperiph/stm32f2xx_cryp_aes.c|src/stm32f2-stdperiph/stm32f2xx_cryp.c|src/stm32f2-stdperiph/stm32f2xx_crc.c|src/stm32f2-stdperiph/stm32f2xx_can.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="system"/>
+						<entry excluding="src/stm32f2-stdperiph/stm32f2xx_wwdg.c|src/stm32f2-stdperiph/stm32f2xx_spi.c|src/stm32f2-stdperiph/stm32f2xx_sdio.c|src/stm32f2-stdperiph/stm32f2xx_rng.c|src/stm32f2-stdperiph/stm32f2xx_iwdg.c|src/stm32f2-stdperiph/stm32f2xx_i2c.c|src/stm32f2-stdperiph/stm32f2xx_hash_sha1.c|src/stm32f2-stdperiph/stm32f2xx_hash_md5.c|src/stm32f2-stdperiph/stm32f2xx_hash.c|src/stm32f2-stdperiph/stm32f2xx_fsmc.c|src/stm32f2-stdperiph/stm32f2xx_flash.c|src/stm32f2-stdperiph/stm32f2xx_dcmi.c|src/stm32f2-stdperiph/stm32f2xx_dbgmcu.c|src/stm32f2-stdperiph/stm32f2xx_dac.c|src/stm32f2-stdperiph/stm32f2xx_cryp_tdes.c|src/stm32f2-stdperiph/stm32f2xx_cryp_des.c|src/stm32f2-stdperiph/stm32f2xx_cryp_aes.c|src/stm32f2-stdperiph/stm32f2xx_cryp.c|src/stm32f2-stdperiph/stm32f2xx_crc.c|src/stm32f2-stdperiph/stm32f2xx_can.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="system"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
